Fix horizontal scrollbar paddings in Material theme (#8473)

--- a/styles/widgets/material/scrollable.material.less
+++ b/styles/widgets/material/scrollable.material.less
@@ -84,6 +84,13 @@
 .dx-scrollbar-horizontal {
     .dx-scrollable-scroll {
         height: @SCROLLBAR_SIZE_THIN;
+
+        &,
+        .dx-rtl & {
+            padding-left: 2px;
+            padding-right: 2px;
+            padding-bottom: 0;
+        }
     }
 
     &.dx-scrollbar-hoverable {
